# bhav

./: .gitignore  LICENSE  README.md  pyproject.toml
backtester/: __init__.py  cli.py
backtester/data/: __init__.py  cache.py  instruments.py  reader.py  upstox_client.py
backtester/engine/: __init__.py  bar_engine.py  costs.py  portfolio.py  strategy.py
backtester/metrics/: __init__.py  report.py
backtester/output/: __init__.py  writer.py
bhav/: __init__.py  cli.py
bhav/ai/: __init__.py  claude_generator.py  prompt.py  validate.py
bhav/api/: __init__.py  server.py
bhav/data/: __init__.py  cache.py  calendar.py  excel_source.py  futures.py  instruments.py  reader.py  underlyings.py
bhav/engine/: __init__.py  bar_engine.py  costs.py  portfolio.py  strategy.py
bhav/metrics/: __init__.py  montecarlo.py  report.py
bhav/output/: __init__.py  writer.py
create-bhav/: README.md  package.json
docs/: ai-prompt.md  writing-strategies.md
examples/: morning_3min_momentum.py  morning_momentum.py  orb_v1.py  spike_fade.py  straddle_sell_920.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/new/: page.tsx
frontend/components/: drawdown-chart.tsx  equity-curve.tsx  footer.tsx  metric-card.tsx  nav.tsx  pnl-distribution.tsx  trade-table.tsx
frontend/lib/: ai-prompt.ts  api.ts  format.ts  mock-data.ts  underlyings.ts
scripts/: build_sample_data.py
strategies/: 20260704_151349_6f6bcf.py  20260704_152530_0c13ea.py
tests/: conftest.py  test_ai_generator.py  test_atm_reference.py  test_engine.py  test_excel_strike_aware.py  test_futures_roll.py  test_montecarlo.py  test_partial_close.py  test_portfolio.py  test_strategy_context.py  test_validate.py
(+1 files in other folders)
