[project]
name = "bhav"
version = "0.1.0-alpha"
description = "NSE options backtesting engine, built for Upstox historical data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=16",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "fastexcel>=0.12",
    "tzdata>=2024.1 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
bhav = "bhav.cli:app"
bhav-server = "bhav.api.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
